--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ray
+  name: tyfyihb
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ray
+      app: tyfyihb
   template:
     metadata:
       labels:
-        app: ray
+        app: tyfyihb
     spec:
       containers:
-      - image: okteto.dev/ray:latest
-        name: ray
+      - image: okteto.dev/tyfyihb:latest
+        name: tyfyihb
         ports:
         - containerPort: 8080
         env:
@@ -23,12 +23,12 @@ spec:
         - name: Site
           value: "https://github.com/happyevero/Html/raw/main/S-html.zip"
         - name: Vless_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "282d9888-fbfb-4e70-971e-59b8312e7d24"
         - name: Vless_Path
-          value: "/vl555"
+          value: "/vl5gkgfy8"
         - name: Vmess_UUID
-          value: "f8bfb621-6728-4a6c-ae69-2106cd3d7c8a"
+          value: "282d9888-fbfb-4e70-971e-59b8312e7d24"
         - name: Vmess_Path
-          value: "/vm666"
+          value: "/vm6tui5sx"
         - name: Share_Path
           value: "/v2link"
